Added placeholder values

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-            
+<h1 style="color: red">THIS IS A PLACEHOLDER!!!</h1><br/>
+
 {% include career-profile.html %}
             
 {% include experience.html %}
